Change to LaserSell

--- a/sidepanel.html
+++ b/sidepanel.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Lasersell</title>
+    <title>LaserSell</title>
     <style>
       :root {
         --bg: #020817;
@@ -258,7 +258,7 @@
   <body>
     <div id="app">
       <div class="header">
-        <div class="title">Lasersell</div>
+        <div class="title">LaserSell</div>
         <div>
           <span id="status-dot" class="status-dot" title="Disconnected"></span>
           <span id="status-text" class="sr-only">Disconnected</span>
