--- a/sidepanel.html
+++ b/sidepanel.html
@@ -115,6 +115,60 @@
         font-weight: 600;
       }
 
+      .hidden {
+        display: none;
+      }
+
+      .pairing-row {
+        display: flex;
+        gap: 8px;
+      }
+
+      .pairing-input {
+        flex: 1;
+        border-radius: 0.5rem;
+        border: 1px solid var(--border);
+        background: rgba(15, 23, 42, 0.6);
+        color: var(--fg);
+        padding: 8px 10px;
+        font-size: 13px;
+      }
+
+      .pairing-input::placeholder {
+        color: var(--muted);
+      }
+
+      .pairing-button {
+        border-radius: 0.5rem;
+        border: 1px solid var(--border);
+        background: rgba(34, 197, 94, 0.2);
+        color: var(--fg);
+        padding: 8px 12px;
+        font-weight: 600;
+        cursor: pointer;
+      }
+
+      .pairing-button:disabled {
+        opacity: 0.6;
+        cursor: not-allowed;
+      }
+
+      .pairing-status {
+        font-size: 12px;
+        color: var(--muted);
+      }
+
+      .disconnect-button {
+        align-self: flex-start;
+        border-radius: 0.5rem;
+        border: 1px solid var(--border);
+        background: rgba(239, 68, 68, 0.15);
+        color: var(--fg);
+        padding: 6px 10px;
+        font-size: 12px;
+        cursor: pointer;
+      }
+
       .muted {
         color: var(--muted);
       }
@@ -253,6 +307,26 @@
           <div class="card-value" id="total-pnl">0.0000</div>
         </div>
       </div>
+
+      <section class="panel" id="pairing-panel">
+        <div class="panel-header">
+          <span>Pair LaserSell</span>
+          <span class="muted">Telemetry</span>
+        </div>
+        <div class="pairing-row" id="pairing-form">
+          <input
+            class="pairing-input"
+            id="pairing-code"
+            type="text"
+            inputmode="text"
+            autocomplete="off"
+            placeholder="Enter pairing code"
+          />
+          <button class="pairing-button" id="pairing-button">Connect</button>
+        </div>
+        <div class="pairing-status" id="pairing-status"></div>
+        <button class="disconnect-button hidden" id="disconnect-button">Disconnect</button>
+      </section>
 
       <section class="panel" style="flex: 1;">
         <div class="panel-header">
