--- a/popup.html
+++ b/popup.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>LaserSell Dashboard</title>
+    <title>LaserSell Pairing</title>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/sidepanel/main.tsx"></script>
+    <script type="module" src="/src/popup/main.tsx"></script>
   </body>
 </html>
