--- a/popup.html
+++ b/popup.html
@@ -6,7 +6,7 @@
     <title>LaserSell Pairing</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">Loading LaserSell...</div>
     <script type="module" src="/src/popup/main.tsx"></script>
   </body>
 </html>
