--- a/sidepanel.html
+++ b/sidepanel.html
@@ -6,7 +6,7 @@
     <title>LaserSell Dashboard</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">Loading LaserSell...</div>
     <script type="module" src="/src/sidepanel/main.tsx"></script>
   </body>
 </html>
